--- a/assets/css/slider.css
+++ b/assets/css/slider.css
@@ -59,32 +59,15 @@
 }
 
 
-.card-slider {
-    border: 2px solid var(--main-color);
-    border-radius: 20px;
-    background-color: transparent;
-    box-shadow: 0px 0px 26px 0px var(--main-color);
-    cursor: pointer;
-
-    &:focus {
-        background-color: var(--hover-main-color);
-        color: var(--main-white-color);
-    }
-
-    &:hover {
-        background-color: var(--hover-main-color);
-        color: var(--main-white-color);
-    }
-}
-
-
 @media screen and (max-width: 992px) {
     .carousel {
-        height: 350px;
+        height: 400px;
     }
 
-    .card-slider {
-        width: 300px;
-        box-shadow: none;
+    .carousel-item {
+        .card {
+            box-shadow: none;
+        }
     }
+
 }
