--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,20 +86,20 @@ h2 {
 
     &:focus {
         background-color: var(--hover-main-color);
-        border: 1px solid var(--main-color);
-        color: var(--main-white-color);
+        border: 1px solid var(--main-color) !important;
+        color: var(--main-white-color) !important;
     }
 
     &:hover {
         background-color: var(--hover-main-color);
-        color: var(--main-white-color);
-        border: 1px solid var(--main-color);
+        color: var(--main-white-color) !important;
+        border: 1px solid var(--main-color) !important;
     }
 
     &.active {
-        border: 1px solid var(--main-color);
+        border: 1px solid var(--main-color) !important;
         background: linear-gradient(to top, var(--main-color), #2e0832);
-        color: var(--main-white-color);
+        color: var(--main-white-color) !important;
     }
 }
 
